# CUDA-code

./: CLAUDE.md
1.2lesson/: test.cu
2.1lesson/: hello.cu
2.3lesson/: ex1  ex1.cu  ex2  ex2.cu
2.6lesson/: ex1  ex1.cu
3.1lesson/: matrixSum1D_CPU.cu  matrixSum1D_GPU  matrixSum1D_GPU.cu  matrixSum1D_GPU_if_device.cu  setDevice  setDevice.cu
3.2lesson/: errorCheckFunction  errorCheckFunction.cu  errorCheckKernel  errorCheckKernel.cu
3.3lesson/: eventRecordTime  eventRecordTime.cu  nvprofAnalysis
3.4lesson/: coresCount  coresCount.cu  query  query.cu
3.5lesson/: grid1D_block1D  grid1D_block1D.cu  grid2D_block1D  grid2D_block1D.cu  grid2D_block2D  grid2D_block2D.cu
4.10lesson/: CMakeLists.txt
4.10lesson/inc/: reduce.hpp  timer.hpp  utils.hpp
4.10lesson/src/: main.cpp  matmul_gpu_basic.cu  reduce_cpu.cpp  timer.cpp  utils.cpp
4.3lesson/: registerNum
4.4lesson/: CMakeLists.txt  global_memory.cu
4.5lesson/: dynamic_shared_memory.cu  static_shared_memory.cu
4.6lesson/: constant_memory.cu
4.7lesson/: CMakeLists.txt  GPU_cache.cu
4.8lesson/: CMakeLists.txt  arrayAddition.cu  queryInfo.cu
